homework-chart/templates/pg-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres-service
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
